--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ title: Public and Private Bodies
 tagline: Italian Renaissance Art and Culture 1350-1550
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "CollectionBuilder-GH is a template for creating small digital collection exhibits on GitHub Pages designed for teaching digital library skills"
+description: "This website shows content from the course ARTH 321: Public and Private Bodies, Italian Renaissance Art and Culture 1350-1550, taught in the Department of Art History, Visual Art and Theory at the University of British Columbia."
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: AHVA VRC
 
