--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ source-code: https://github.com/CollectionBuilder/collectionbuilder-gh
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: Public and Private Bodies
+title: ARTH 321 Public and Private Bodies
 # tagline, a short phrase that will appear throughout the site in the top banner
 tagline: Italian Renaissance Art and Culture 1350-1550
 # description appears in meta tags and other locations
