--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ title: ARTH 321 Public and Private Bodies
 tagline: Italian Renaissance Art and Culture 1350-1550
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "This website shows content from the course ARTH 321: Public and Private Bodies, Italian Renaissance Art and Culture 1350-1550, taught in the Department of Art History, Visual Art and Theory at the University of British Columbia. Click the "Learn More" button below to read about what you will learn in this class."
+description: "This website shows content from the course ARTH 321: Public and Private Bodies, Italian Renaissance Art and Culture 1350-1550, taught by <a href="https://ahva.ubc.ca/profile/joseph-monteyne/">Joseph Monteyne</a> in the Department of Art History, Visual Art and Theory at the University of British Columbia. Click the "Learn More" button below to read about what you will learn in this class."
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: AHVA VRC
 
