--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ source-code: https://github.com/CollectionBuilder/collectionbuilder-gh
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: ARTH 320, Entangled Worlds
+title: ARTH 321 Public and Private Bodies
 # tagline, a short phrase that will appear throughout the site in the top banner
 tagline: A Digital Exhibit
 # description appears in meta tags and other locations
@@ -34,7 +34,7 @@ author: UBC AHVA
 #
 # Set the metadata for your collection (the name of the csv file in your _data directory that describes the objects in your collection) 
 # Use the filename of your CSV **without** the ".csv" extension! E.g. _data/demo-metadata.csv --> "demo-metadata"
-metadata: sacred-made-real-copy
+metadata: public-and-private
 
 ##########
 # Site/Organization Branding 
