--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ title: ARTH 321 Public and Private Bodies
 tagline: Italian Renaissance Art and Culture 1350-1550
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "This website is for the course ARTH 321 Public and Private Bodies: Italian Renaissance Art and Culture 1350-1550 taught by Joseph Monteyne in the Department of Art History, Visual Art and Theory, University of British Columbia. This course explores changing roles for visual art and culture within communes, courts, religious practices and private lives in Renaissance Italy. This website was created traditional, ancestral, and unceded territory of the xwməθkwəy̓əm (Musqueam) People on whose lands we live, learn and play on."
+description: "This website is for the course ARTH 321 Public and Private Bodies: Italian Renaissance Art and Culture 1350-1550 taught by Joseph Monteyne in the Department of Art History, Visual Art and Theory, University of British Columbia. This course explores changing roles for visual art and culture within communes, courts, religious practices and private lives in Renaissance Italy. This website was created on the traditional, ancestral, and unceded territory of the xwməθkwəy̓əm (Musqueam) People on whose lands we live, learn and play on."
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: AHVA VRC and Joseph Monteyne
 
